# coopvec-diffusion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
apps/: CMakeLists.txt
apps/ModelRunner/: CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.h  main.cpp
assets/data/: HelloTRT.onnx
common/cmake/: ConfigureAgilitySDK.cmake  FetchTensorRTRTX.cmake
include/Shaders/Math/: PCGSampler.slang
plugins/: CMakeLists.txt
plugins/BasicRenderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
plugins/CooperativeVectors/: CMakeLists.txt  CooperativeVectors.cpp  CooperativeVectors.h  LearningRateScheduler.cpp
plugins/CooperativeVectors/Shaders/: CMakeLists.txt
plugins/NeuralInference/: CMakeLists.txt  Common.cpp  TensorRT.cpp  TensorRT.h
plugins/NeuralInference/Shaders/: CMakeLists.txt  GaussianNoise.slang  ImageToTensor.slang  ImageToTensorWithWarp.slang  ImageTransform.h  TensorToImage.slang  shaders.cfg
samples/: CMakelists.txt
samples/HelloCoopVec/: CMakeLists.txt  NetworkConfig.h  SimpleTraining.cpp  SimpleTraining_Inference.slang  SimpleTraining_Optimizer.slang  SimpleTraining_Training.slang  shaders.cfg
samples/HelloDonut/: CMakeLists.txt  main.cpp
samples/HelloTRT/: CMakeLists.txt  Main.cpp  main.cpp
samples/HelloWorld/: CMakeLists.txt  Main.cpp  main.cpp
samples/SimpleInferencing/: CMakeLists.txt  SimpleInferencing.cpp
samples/SimpleTraining/: CMakeLists.txt
src/: CMakeLists.txt
src/Core/: Config.h.in  Fluxel.h  Logger.cpp  Logger.h  Object.h
src/Core/Math/: CMakeLists.txt
src/Core/Math/include/krrmath/: common.h  functors.h  math.h
src/Inference/: Common.cpp  Common.h  TensorRT.cpp  TensorRT.h
src/Inference/Shaders/: GaussianNoise.slang  ImageToTensor.slang  ImageToTensorWithWarp.slang  ImageTransform.h  TensorToImage.slang  shaders.cfg
src/Neural/: CooperativeVectors.cpp  CooperativeVectors.h  Network.cpp  Network.h
src/Render/: RenderPass.cpp  RenderPass.h
src/Shaders/: Activation.slang  CMakeLists.txt  CooperativeVectorFunctions.slang  Loss.slang
src/TensorRT/: Inference.cpp  Inference.h
src/Utils/: DeviceUtils.cpp  DeviceUtils.h  FileSystem.cpp  FileSystem.h  LearningRateScheduler.h
src/core/: logger.cpp  logger.h
